--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,20 @@ button {
      background-repeat:no-repeat; 
      background-position: center
   }
+
+  #myInput {
+    background-image: url('/css/searchicon.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+  }
+
+  .SearchInput
+  {
+    width: 300px; 
+    float:right;
+  }
