--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ input {
   }
 
 button {
-    background-color: #4CAF50;
+    background-color: red;
     border: none;
     color: white;
     padding: 16px 32px;
